--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,7 @@
-Dungca, Renz Monarch B.
+</head>
+<body>
+    <h1>Dungca, Renz Monarch</h1>
+    <h2>BSIT-BA : First Year</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam consequatur possimus unde dolore deleniti impedit, repellat aut minus maxime similique aspernatur ipsam molestias magnam voluptates distinctio ratione facere exercitationem consequuntur.</p>
+</body>
+</html>
