--- a/dungca_tsa2.html
+++ b/dungca_tsa2.html
@@ -20,7 +20,7 @@
                 <p>
                 Student are to enjoy the whole day different Organiztion/club presentation prepared by the 
                 seniors and to lessen the stress Students currently facing on. 
-                <font color="gold"><strong>May 3,2024</strong></font>
+                <font color="green"><strong>May 3,2024</strong></font>
                 .Students can wear casual, semi formal or you best OOTD - Outfit Of The day for this event.
                 </p>
                 <p>
