--- a/dungca_tsa4.html
+++ b/dungca_tsa4.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="a.css">
+    <link rel="stylesheet" href="dungca_tsa4.css">
 </head>
 <img src="LogoTEch.png" class="img1">
 <body>
