--- a/portfolio-dungca.html
+++ b/portfolio-dungca.html
@@ -108,9 +108,9 @@
             <a href="https://tannyel.github.io/it0043tb02/gamorot_dungca_tsa6.html?fbclid=IwAR3uf-IUvIXpS7xxGl-GMitzdBQzPFv1BuUzrjX2uDPPyt-i_0OJx3C0Kzc" class="button">Open</a>
         </div>
         <div class="projects">
-            <img src="" class="proj-img">
+            <img src="TSA 7.png" class="proj-img">
             <h3>TSA 7</h3>
-            <a href="" class="button flames">Open</a>
+            <a href="https://tannyel.github.io/it0043tb02/gamorot_dungca_tsa7.html" class="button flames">Open</a>
         </div>
         <div class="projects">
             <img src="TSA 8.png" class="proj-img">
