--- a/cv.html
+++ b/cv.html
@@ -4,76 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV with Theme Toggle</title>
-  <style>
-    :root {
-      --bg-color: #e3f2fd;
-      --text-color: #000000;
-      --accent-color: #0d47a1;
-    }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    h1, h2 {
-      color: var(--accent-color);
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .name-section {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .theme-toggle {
-      padding: 10px 20px;
-      background-color: var(--accent-color);
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    .theme-toggle:hover {
-      background-color: #0a3c8b;
-    }
-
-    .profile-image {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid var(--accent-color);
-    }
-
-    .section {
-      margin-bottom: 20px;
-    }
-
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-  </style>
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
   <div class="container">
@@ -81,7 +12,7 @@
       <button class="theme-toggle" onclick="toggleTheme()">Switch Theme</button>
     </div>
 
-    <div class="section name-section">
+    <div class="section name-section section-divider">
       <img src="Profile Pic.jpg" alt="Profile Picture" class="profile-image" />
       <div>
         <h1>Renz Monarch B. Dungca</h1>
@@ -89,12 +20,12 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section section-divider">
       <h2>About Me</h2>
       <p>I am a passionate BSIT-BA  Student with 2 years of experience in building and designing websites.</p>
     </div>
 
-    <div class="section">
+    <div class="section section-divider">
       <h2>Experience</h2>
       <ul>
         <li><strong>IT0063</strong> - Advance Web Design</li>
@@ -106,12 +37,12 @@
       </ul>
     </div>
 
-    <div class="section">
+    <div class="section section-divider">
       <h2>Education</h2>
       <p>Bachelor of Science in Information Technology - Far Eastern University Institute of Technology (2023-2025)</p>
     </div>
 
-    <div class="section">
+    <div class="section section-divider">
       <h2>Skills</h2>
       <ul>
         <li>HTML, CSS, JavaScript</li>
@@ -121,30 +52,23 @@
       </ul>
     </div>
 
-    <div class="section">
+    <div class="section section-divider">
       <h2>Contact</h2>
       <p>Email: 202312716@fit.edu.ph</p>
       <p>Phone: 09603896722</p>
+      <p>150 9Th Ave. Caloocan City</p>
+    </div>
+
+    <div class="section section-divider">
+      <h2>References</h2>
+      <ul>
+        <li><strong>Rainiel Cayabyab</strong> &mdash; Web Development Mentor</li>
+        <li><strong>Kirk Nathaniel Gamorot</strong> &mdash; Business Analytics Consultant</li>
+        <li><strong>John Patrick San Roque</strong> &mdash; IT Specialist</li>
+      </ul>
     </div>
   </div>
 
-  <script>
-    function toggleTheme() {
-      const root = document.documentElement;
-      if (root.style.getPropertyValue('--bg-color') === '#e3f2fd') {
-        root.style.setProperty('--bg-color', '#000000'); // Dark Black
-        root.style.setProperty('--text-color', '#00ff00'); // Greenish Text
-        root.style.setProperty('--accent-color', '#00b300'); // Bright Green
-        document.body.style.backgroundImage = 'none';
-        document.body.style.animation = 'none';
-      } else {
-        root.style.setProperty('--bg-color', '#e3f2fd'); // Light Blue
-        root.style.setProperty('--text-color', '#000000');
-        root.style.setProperty('--accent-color', '#0d47a1'); // Blue
-        document.body.style.backgroundImage = 'none';
-        document.body.style.animation = 'none';
-      }
-    }
-  </script>
+  <script src="theme.js"></script>
 </body>
 </html>
